# FilterCamera

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts  开发计划.md  自动化测试计划.md
app/: build.gradle  build.gradle.kts  lint-baseline.xml
app/src/androidTest/java/seu/com/magiccamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/seu/magiccamera/: MainActivity.java  MainActivity.kt
app/src/main/java/com/seu/magiccamera/activity/: AlbumActivity.kt  CameraActivity.java
app/src/main/java/com/seu/magiccamera/adapter/: FilterAdapter.java
app/src/main/java/com/seu/magiccamera/widget/: TwoLineSeekBar.java
app/src/main/kotlin/com/qihao/filtercamera/: FilterCameraApp.kt  MainActivity.kt
app/src/main/kotlin/com/qihao/filtercamera/data/local/: SettingsKeys.kt
app/src/main/kotlin/com/qihao/filtercamera/data/processor/: BeautyProcessor.kt  DocumentScanProcessor.kt  FaceDetectionProcessor.kt  HdrProcessor.kt  MLKitDocumentScanner.kt  NightModeProcessor.kt  PortraitBlurProcessor.kt  TimelapseEngine.kt
app/src/main/kotlin/com/qihao/filtercamera/data/repository/: CameraRepositoryImpl.kt  FavoritesRepositoryImpl.kt  (+3 more)
app/src/main/kotlin/com/qihao/filtercamera/di/: AppModule.kt  RepositoryModule.kt
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  filter_layout.xml  fragment_image_edit_adjust.xml  fragment_image_edit_beauty.xml  fragment_image_edit_filter.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
core/filter/: build.gradle.kts
core/filter/src/main/cpp/: CMakeLists.txt  MagicJni.cpp  native-lib.cpp
core/filter/src/main/cpp/beautify/: MagicBeautify.cpp  MagicBeautify.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
magicfilter/: build.gradle
magicfilter/src/androidTest/java/com/seu/magicfilter/: ExampleInstrumentedTest.java
magicfilter/src/main/: AndroidManifest.xml
magicfilter/src/main/java/com/seu/magicfilter/: MagicEngine.java
magicfilter/src/main/java/com/seu/magicfilter/beautify/: MagicJni.java
magicfilter/src/main/java/com/seu/magicfilter/camera/: CameraEngine.java
magicfilter/src/main/java/com/seu/magicfilter/helper/: SavePictureTask.java
magicfilter/src/main/java/com/seu/magicfilter/widget/: MagicCameraView.java  MagicImageView.java
(+109 files in other folders)
